--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,25 +27,36 @@ jobs:
         with:
           node-version: 20
 
-      # 3️⃣ Install & test backend
-      - name: Install backend dependencies
+      # 3️⃣ Create backend .env dynamically
+      - name: Create backend .env
+        run: |
+          echo "PORT=${{ secrets.BACKEND_PORT }}" >> server/.env
+          echo "MONGO_URI=${{ secrets.BACKEND_MONGO_URI }}" >> server/.env
+          echo "JWT_SECRET=${{ secrets.BACKEND_JWT_SECRET }}" >> server/.env
+
+      # 4️⃣ Install & test backend
+      - name: Install backend dependencies and test
         run: |
           cd server
           npm install
           npm test || echo "No tests found"
 
-      # 4️⃣ Install & build frontend
+      # 5️⃣ Create frontend .env dynamically
+      - name: Create frontend .env
+        run: |
+          echo "VITE_API_URL=${{ secrets.FRONTEND_API_URL }}" >> client/.env
+
+      # 6️⃣ Install & build frontend
       - name: Install frontend dependencies and build
         run: |
           cd client
           npm install
           npm run build
 
-      # 5️⃣ Setup Docker
-      - name: Set up Docker
+      # 7️⃣ Setup Docker CLI plugin (modern docker compose)
+      - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # 6️⃣ Build Docker images
+      # 8️⃣ Build Docker images
       - name: Build Docker images
-        run: |
-          docker-compose build
+        run: docker compose -f docker-compose.yml build
